--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ position: absolute;
 top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
-border: 5px solid white;
+border-style: white;
 max-width: 100%;
 max-height: 100%;
 }
